# options-pricer-dashboard

./: .gitignore  EXTENSIONS.md  README.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py  market_data.py  models.py
backend/app/pricing/: asian.py  barrier.py  binomial_tree.py  black_scholes.py  monte_carlo.py
backend/tests/: test_pricing.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AsianChart.tsx  BarrierChart.tsx  GreeksPanel.tsx  GreeksSensitivityChart.tsx  IVSmileChart.tsx  MCConvergenceChart.tsx  MethodComparisonChart.tsx  OptionForm.tsx  PnLHeatmap.tsx  PortfolioGreeksTable.tsx  PortfolioPnLHeatmap.tsx  PositionBuilder.tsx  PriceResultPanel.tsx
frontend/src/types/: options.ts
infra/: backend.tf  frontend.tf  main.tf  variables.tf
infra/bootstrap/: main.tf  variables.tf
reference/: README.md
reference/cpp/: CMakeLists.txt  README.md  options.hpp  test_options.cpp
reference/fixtures/: expected_binomial.csv  expected_bs.csv  expected_iv.csv  test_cases.csv
reference/matlab/: README.md  binomial_tree.m  bs_greeks.m  bs_price.m  implied_vol.m  monte_carlo.m  test_options.m
reference/matlab/private/: norm_cdf.m  norm_pdf.m
reference/python/: README.md  options.py  test_options.py
reference/r/: README.md  options.R  test_options.R
